2011-08-27  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* buffer.py debugger.py netbeans.py simple.py: Fix after starting a
	new gdb session, breakpoint signs may be placed in the wrong files.

===============================================================================
2011-08-15  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* debugger.py netbeans.py evtloop.py pydb.py: Do not send any netbeans
	command after DETACH (rework). Windows and CLEWN_PIPES: fix ^C typed
	in the console hangs the socketThread. Fix invalid file descriptor in
	select after detach.
	* misc.py evtloop.py pydb.py vim.py netbeans.py debugger.py:
	Synchronise pdb threads (rework).
	* asyncproc.py debugger.py evtloop.py nt.py posix.py pydb.py vim.py:
	Clean up threads termination and fix 'select_event' cannot be a class
	instance.
	* asyncproc.py evtloop.py pydb.py vim.py netbeans.py: Add support for
	the Python pdb debugger on Windows.
	* vim.py pydb.py: Synchronize both pdb threads on a ping.
	* vim.py pydb.py: Fix ignored AttributeError exception (pdb).
	* debugger.py vim.py misc.py pydb.py: Implement the 'loglevel' pyclewn
	command.
	* netbeans.py misc.py: Use difflib.unified_diff to update the watched
	variables buffer (see http://bugs.python.org/issue6931).
	* inferior_tty.py: Fix 'inferior_tty.py' uses 100% cpu.

===============================================================================
2011-06-18  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* version-hook.py: Run version-hook with Python 3.
	* runtime/autoload/pyclewn.vim: Fix a syntax error in
	.pyclewn_keys.gdb causes :Pyclewn to hang.
	* The whole repository: Create the 'python2' mercurial branch and port
	pyclewn to Python 3 on the default branch.
	* misc.py tty.py vim.py: Fix some error messages are not printed on
	stderr.
	* gdb.py gdbmi.py: Dereference pointers in balloon evaluation.
	* vim.py tty.py: Do not use a file descriptor set as the condition for